--- a/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_login.html
+++ b/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_login.html
@@ -12,28 +12,36 @@
     }
     .xui-tab > div{
     	display: inline-block;
-    	width: 50%;
-    	font-family: "黑体";
+    	font-family: "Microsoft Yahei";
     	box-sizing: border-box;
     	background-color: #fff;
     }
     .xui-tab-active{
-    	font-size: 1.2rem;
+    	font-size: 1.1rem;
     	text-align: center;
     	color: #cf0404;
     	border-bottom: 2px solid #cf0404;
+    	width: 36%;
     }
     .xui-tab-normal{
-    	width: 50%;
-    	font-family: "黑体";
+    	width: 32%;
+    	font-family: "Microsoft Yahei";
     	box-sizing: border-box;
     	background-color: #fff;
     	display: inline-block;
-    	border-left: 1px solid #f5f5f5;
-    	font-size: 1rem;
+    	border-right: 1px solid #f5f5f5;
+    	font-size: .95rem;
     	text-align: center;
     	color: #000;
     }	
+    @media only screen and (max-width: 320px){
+	    .xui-tab-normal{
+	    	font-size: 0.9rem;
+	    }
+	    .xui-tab-active{
+	    	font-size: 1rem;
+	    }
+    }
 </style>
 {% endblock %}
 
@@ -41,9 +49,10 @@
 <div class="xui-wzcoinPay-page xui-page">
     {% if is_weshop %}
 	<div class="xui-tab">
-		<div class="xui-tab-active">微众卡余额查询</div>
 		<a class="xui-tab-normal" href="./?module=market_tool:weizoom_card&model=weizoom_card_exchange_list&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0&is_wallet=1
-">微众卡钱包</a>
+">微众卡包</a>
+		<a class="xui-tab-normal" href="">其他卡包</a>
+		<div class="xui-tab-active">微众卡余额查询</div>
 	</div>
     {% endif %}
 	<div class="xui-container p30">
