用户名显示

--- a/weapp/apps/customerized_apps/rebate/templates/editor/card_rebate_details.html
+++ b/weapp/apps/customerized_apps/rebate/templates/editor/card_rebate_details.html
@@ -87,7 +87,7 @@
 					<td>${item.card_password}</td>
 					<!--<td>${item.money}</td>-->
 					<!--<td>${item.used_money}</td>-->
-					<td>${item.member_name}</td>
+					<td>{{html item.username}}</td>
 				</tr>
 				{{/each}}
 		    </tbody>
