新页面打开会员购买

--- a/weapp/mall/templates/mall/editor/offshelf_products.html
+++ b/weapp/mall/templates/mall/editor/offshelf_products.html
@@ -174,7 +174,7 @@
 						</br>
 						<a href="javascript:void(0);" class="xa-delete">彻底删除</a>
 						{{if data.data.mall_type == 1}}
-						<a href="/mall2/product_members/?id=${product.id}" class="xui-block">购买会员</a>
+						<a href="/mall2/product_members/?id=${product.id}" class="xui-block" target="_blank">购买会员</a>
 						{{/if}}
 					</td>
 				</tr>
