--- a/weapp/mall/templates/mall/editor/orders.html
+++ b/weapp/mall/templates/mall/editor/orders.html
@@ -304,7 +304,7 @@
 							{{if !(data.mall_type == 0 && order.supplier_user_id) }}
 								<span class="xui-weizoomCard pr">
 									<i class="xa-weizoomCardImg"></i>
-									<span class="pa" style="display:none;">微众卡支付&nbsp${order.weizoom_card_money_rest}元</span>
+									<span class="pa" style="display:none;">微众卡支付&nbsp${order.weizoom_card_money}元</span>
 								</span>
 							{{/if}}
 						{{/if}}
