--- a/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_login.html
+++ b/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_login.html
@@ -49,8 +49,7 @@
 <div class="xui-wzcoinPay-page xui-page">
     {% if is_weshop %}
 	<div class="xui-tab">
-		<a class="xui-tab-normal" href="./?module=market_tool:weizoom_card&model=weizoom_card_exchange_list&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0&is_wallet=1
-">微众卡包</a>
+		<a class="xui-tab-normal" href="./?module=market_tool:weizoom_card&model=weizoom_card_wallet&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0">微众卡包</a>
 		<a class="xui-tab-normal" href="./?module=market_tool:weizoom_card&model=other_cards_list&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0
 ">其他卡包</a>
 		<div class="xui-tab-active">微众卡余额查询</div>
