新建福利卡券页面

--- a/weapp/mall/templates/mall/editor/promotion/virtual_products.html
+++ b/weapp/mall/templates/mall/editor/promotion/virtual_products.html
@@ -18,7 +18,7 @@
 		<input type="checkbox" id="topSelectAll" class="xa-selectAll" />
 		<label for="topSelectAll" class="xui-topSelectAll">全选</label>
 		<a href="javascript:void(0);" class="btn btn-default ml10 xa-proBatchFinish">结&nbsp;&nbsp;&nbsp;&nbsp;束</a>
-		<a href="/mall2/forbidden_coupon_product/?type=create" class="btn btn-success ml10 fr xui-btnSetting"><img src="/static_v2/img/editor/plusOpcity.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;添加禁用商品</a>
+		<a href="/mall2/virtual_products/?type=create" class="btn btn-success ml10 fr xui-btnSetting"><img src="/static_v2/img/editor/plusOpcity.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;新建福利卡券</a>
 	</div>
 
 	
