[商城]新建商品添加商品类型

--- a/weapp/mall/templates/mall/editor/promotion/virtual_products.html
+++ b/weapp/mall/templates/mall/editor/promotion/virtual_products.html
@@ -7,7 +7,7 @@
 	<ul class="breadcrumb">
 		<li>您当前所在位置</li>
 		<li><a href="/mall2/flash_sale_list/">促销管理</a></li>
-		<li class="active">禁用优惠券商品</li>
+		<li class="active">福利卡券列表</li>
 	</ul>
 </div>
 <div class="xa-promotionFilterView xui-filterPanel"></div>
