--- a/weapp/mall/templates/mall/editor/edit_product.html
+++ b/weapp/mall/templates/mall/editor/edit_product.html
@@ -91,6 +91,16 @@
 						<div class="errorHint" data-error-hint="请选择供货商"></div>
 					</div>
 				</div>
+				<div class="form-group">
+					<label class="control-label fl" for="supplier">商品类型{{product.type}}：</label>
+					<div class="fl">
+	                	<select class="ml5">
+	                		<option value="normalProduct">普通商品</option>
+	                		<option value="virtualProduct">虚拟商品</option>
+	                		<option value="wzCard">微众卡</option>
+	                	</select>
+					</div>
+				</div>
 				<div class="form-group ">
 					<label class="control-label fl" for="purchase_price">采购价：</label>
 					<div class="fl">
