福利卡券中查询虚拟商品

--- a/weapp/mall/templates/mall/editor/edit_product.html
+++ b/weapp/mall/templates/mall/editor/edit_product.html
@@ -91,6 +91,8 @@
 						<div class="errorHint" data-error-hint="请选择供货商"></div>
 					</div>
 				</div>
+
+				<!-- weshop微众商城定制功能start -->
 				{% if request.manager.username == 'jobs' %}
 				<div class="form-group">
 					<label class="control-label fl" for="type">商品类型：</label>
@@ -103,6 +105,7 @@
 					</div>
 				</div>
 				{% endif %}
+				<!-- weshop微众商城定制功能end -->
 				<div class="form-group ">
 					<label class="control-label fl" for="purchase_price">采购价：</label>
 					<div class="fl">
