--- a/weapp/mall/templates/mall/editor/promotion/create_virtual_product.html
+++ b/weapp/mall/templates/mall/editor/promotion/create_virtual_product.html
@@ -86,14 +86,16 @@
 			<!-- </div> -->
 			<div class="xui-i-item">
 				<label class="star_show">上传码库文件</label>
-				<div class="control-group xui-controlbox">
-					<div class="controls">
-						<input type="hidden" name="file_url" id="file_url" value="" data-validate="require-file" data-force-validate="true"/>
-						<div id="commonSelectCSVFileDialog-fileView"></div>
-						<span class="help-block mt15 xui-warning">仅支持不大于1MB的CSV文件</span>
-						<div class="errorHint"></div>
-					</div>
-				</div>
+				<div class="controls xa-errorHintContainer">
+		            <div style="margin-left: 168px;">
+		                <input type="file" id="card-file" name="card-file">
+		                <input type="hidden" id="weizoom_card_ids">
+		                <input type="hidden" id="weizoom_card_passwords">
+		                <input type="hidden" id="file_path">
+			            <span class="xa-exchangeStock">{% if card_stock %}库存：{{card_stock}}{% endif %}</span>
+			            <span><a target="_blank" {% if rebate_rule %} href="/apps/rebate/card_details/?id={{ rebate_rule.id }}" {% else %}{% endif %} class="xui-detail" title="发放详情">发放详情</a></span>
+		            </div>
+		        </div>
 			</div>
 		</div>
 
@@ -110,7 +112,7 @@
 
 {% block js %}
 {% verbatim %}
-<script id="selected-promotion-products-view-tmpl-src" type="text/x-jquery-tmpl">
+<script id="creart-virtual-product-view-tmpl-src" type="text/x-jquery-tmpl">
 	<table id="productListTable" class="table table-bordered mb0 table-condensed xb-noTdBorder xb-stripedTable">
 		<thead class="xui-theadHeight">
 			<tr>
@@ -124,11 +126,6 @@
             {{each(i, product) products}}
 			<tr
 				data-id="${product.id}"
-				{{if (product.is_use_custom_model)}}
-				data-model-id="${product.current_used_model.id}"
-				{{else}}
-				data-model-id="${product.standard_model.id}"
-				{{/if}}
 			>
 				<td style="text-align: left;" class="pt10">
 					<div class="imgBox fl" style="width: auto;border:solid 1px #ccc;">
@@ -144,18 +141,14 @@
 						<div class="mb25">
 							<a href="${product.detail_link}" target="_blank">${product.name}</a>
 						</div>
-						{{if product.is_use_custom_model}}
-						<span class="label label-info xa-showAllModels cursor-pointer" style="font-size: 1.0em;">查看${product.models.length}个规格详情</span>
-						{{else}}
 						<p style="color:#666;">商品条码：${product.bar_code}</p>
-						{{/if}}
 					</div>
 				</td>
 				<td class="xa-product-price">
 					${product.display_price_range}
 				</td>
 				<td>
-					333${product.total_stocks}555
+					${product.stocks}
 				</td>
 				<td>
 					<a href="javascript:void(0);" class="xa-delete">删除</a>
@@ -164,11 +157,6 @@
 			{{/each}}
 		</tbody>
 	</table>
-	<div class="mt10" style="padding-left:8px">
-		<input type="checkbox" id="topSelectAll" class="xa-selectAll" />
-		<label for="topSelectAll" class="xui-topSelectAll">全选</label>
-		<a href="javascript:void(0);" class="btn btn-default ml10 xa-batchDelete">删&nbsp;&nbsp;&nbsp;&nbsp;除</a>
-	</div>	
 </script>
 {% endverbatim %}
 
@@ -181,7 +169,7 @@ $(document).ready(function() {
 		enableMultiSelection: false,
 		tableOutAllSelectable:true,
 		uniqueDialog:'W.dialog.mall.CreatVirtualProductDialog',
-		tableTemplate: 'selected-promotion-products-view-tmpl-src'
+		tableTemplate: 'creart-virtual-product-view-tmpl-src'
 	});
 	productSelector.render();
 
@@ -227,31 +215,63 @@ $(document).ready(function() {
 		})
 	});
 
-	// csv文件
-	// var $csvView = $('#commonSelectCSVFileDialog-fileView');
-	// csvView = new W.view.common.CVSView({
- //        el: $csvView.get(),
- //        width: 84,
- //        height:84,
- //        autoShowHelp: true
- //    });
- //    csvView.bind('upload-file-success', function(path) {
- //        var value = $imageInput.val();
- //        if (value.length > 0) {
- //            value += ','+ path;
- //        }else{
- //            value = path;
- //        }
- //        $imageInput.val(value);
- //        if (!W.validate($('[name="file_url"]'))) {
- //            return false;
- //        }
- //    });
- //    csvView.bind('delete-file', function(path) {
- //        $imageInput.val('');
-
- //    });
- //    csvView.render();
+	//初始化上传组件参数
+    var swf = '/static/uploadify.swf',
+        overrideEvents = ['onError', 'onUploadSuccess'],
+        multi = false,
+        removeCompleted = false,
+        uploader = '/mall2/upload_virtual_product_file/',
+        cancelImg = '/static/img/cancel.png',
+        buttonText = '添加码库',
+        fileTypeExts = '*.xls',
+        method = 'post',
+        removeTimeout = 0.0,
+        width = 100,
+        onError = function(errorType,file) {
+            xlog(errorType);
+            xlog(file.name);
+        };
+    //初始化上传组件
+    $("#card-file").uploadify({
+        overrideEvents: overrideEvents,
+        swf: swf,
+        width: width,
+        multi: multi,
+        removeCompleted: removeCompleted,
+        uploader: uploader,
+        cancelImg: cancelImg,
+        buttonText: buttonText,
+        fileTypeDesc: '虚拟码库',
+        fileTypeExts: fileTypeExts,
+        method: method,
+        removeTimeout: removeTimeout,
+        onUploadStart: function(file){
+            if(file && (file.name.substring(file.name.length - 3,file.name.length) == 'xls')){}else{
+                W.showHint('error', '请上传正确csv文件');
+                $("#card-file").uploadify('cancel', '*');
+                $("#card-file").uploadify('stop');
+            }
+        },
+        onUploadSuccess : function(file, response, status) {
+            response = JSON.parse(response);
+            if(response.code == 200){
+                console.log(response.data);
+                $("#card-file").find('.uploadify-button-text').html('重新选择');
+                $("#file_path").val(response.data['file_path']);
+                $(".xa-exchangeStock").html("库存：" + response.data['card_stock']);
+                has_file = true;
+            }else{
+                W.showHint('error', response.errMsg);
+            }
+        },
+        onSelect: function(file) {
+            var $queues = $('#card-file-queue').children();
+            if($queues.length > 1){
+                $queues.eq(0).remove();
+            }
+        },
+        onError: onError
+    });
 });
 </script>
 
