--- a/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_wallet.html
+++ b/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_wallet.html
@@ -367,7 +367,7 @@
 								</div>
 							</div>
 							<div class="xui-detail-right">
-								<a href="/workbench/jqm/preview/?module=market_tool:weizoom_card&model=card_exchange_detail&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0&card_id={{item.card_id}}" class="xui-check-detail">查看详情</a>
+								<a href="/workbench/jqm/preview/?module=market_tool:weizoom_card&model=card_wallet_details&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0&card_id={{item.card_number}}&card_password={{ item.card_password }}" class="xui-check-detail">查看详情</a>
 								<div>
 									<span>卡号:</span> 
 									<span class="xui-numfont">{{item.card_number}}</span>
