修改页面样式

--- a/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_wallet.html
+++ b/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_wallet.html
@@ -203,6 +203,9 @@
 	    .xui-tab-active{
 	    	font-size: 1rem;
 	    }
+	    .xui-detail-top{
+	    	padding-right: 0;
+	    }
     }
     .xui-mask{
     	width: 100%;
