高级投票活动增加选手排名展示

--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_player_details.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_player_details.html
@@ -78,12 +78,12 @@
         font-size: 1rem;
 	}
 	.wui-detail-middle{
-		width: 11.5rem;
+		width: 16.5rem;
 	    margin: 5% 0 1% 2%;
 	    display: inline-block;
 	}
 	.wui-detail-middle .wui-detail-vote-count{
-		float: right;
+        margin-left: 20px;
 	}
 	.wui-detail-middle .wui-detail-vote-count span{
 		color: #ff4200;
